fix: added cjs support

--- a/package.json
+++ b/package.json
@@ -5,33 +5,34 @@
   "author": "Kari",
   "license": "MIT",
   "type": "module",
-  "main": "./dist/plugin/index.js",
+  "main": "./dist/plugin/index.cjs",
+  "module": "./dist/plugin/index.js",
   "types": "./dist/plugin/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/plugin/index.d.ts",
       "import": "./dist/plugin/index.js",
-      "require": "./dist/plugin/index.js"
+      "require": "./dist/plugin/index.cjs"
     },
     "./plugin": {
       "types": "./dist/plugin/index.d.ts",
       "import": "./dist/plugin/index.js",
-      "require": "./dist/plugin/index.js"
+      "require": "./dist/plugin/index.cjs"
     },
     "./components": {
       "types": "./dist/components/index.d.ts",
       "import": "./dist/components/index.js",
-      "require": "./dist/components/index.js"
+      "require": "./dist/components/index.cjs"
     },
     "./rsc": {
       "types": "./dist/rsc/index.d.ts",
       "import": "./dist/rsc/index.js",
-      "require": "./dist/rsc/index.js"
+      "require": "./dist/rsc/index.cjs"
     },
     "./hooks": {
       "types": "./dist/hooks/index.d.ts",
       "import": "./dist/hooks/index.js",
-      "require": "./dist/hooks/index.js"
+      "require": "./dist/hooks/index.cjs"
     }
   },
   "files": [
